# tio-magic-animation

./: .gitignore  CONTRIBUTING.md  GETTING-STARTED.md  PARAMETER-DOCUMENTATION.md  README.md  _config.yml  gradio_wrapper.py  modal_demo.py  pyproject.toml
.github/workflows/: lint.yml
_layouts/: default.html
docs/: API.md  GETTING-STARTED.md  Gemfile  PARAMETER-DOCS.md  PARAMETER-DOCUMENTATION.md  _config.yml  index.md
docs/_layouts/: default.html
docs/assets/css/: style.css
examples/: quick_start.py
src/tiomagic/: facade.py
src/tiomagic/core/: _jobs.py  config.py  jobs.py  registry.py
src/tiomagic/core/_utils/: _utils.py
src/tiomagic/core/schemas/: __init__.py  image_to_video.py  interpolate.py  text_to_video.py
src/tiomagic/core/utils/: __init__.py  modal_helpers.py  utils.py
src/tiomagic/providers/local/: base.py  luma.py  veo.py
src/tiomagic/providers/modal/: __init__.py  base.py  cogvideox_5b.py  cogvideox_5b_i2v.py  framepack_i2v_hy.py  ltx_video.py  pusav1.py  wan_2_1_14b.py  wan_2_1_flf2v_14b_720p.py  wan_2_1_i2v_14b_720p.py  wan_2_1_vace_14b.py
tiomagic/: facade.py
tiomagic/core/: __init__.py  config.py  errors.py  feature_types.py  interfaces.py  jobs.py  registry.py  validation.py
tiomagic/core/schemas/: __init__.py  image_to_video.py  interpolate.py  pose_guidance.py  text_to_video.py
tiomagic/core/utils/: __init__.py  modal_helpers.py  utils.py
tiomagic/examples/: quick_start.py
tiomagic/providers/: __init__.py
tiomagic/providers/local/: __init__.py  base.py  veo.py
tiomagic/providers/modal/: __init__.py  base.py  cogvideox_5b.py  cogvideox_5b_i2v.py  framepack_i2v_hy.py  ltx_video.py  wan_2_1_14b.py  wan_2_1_flf2v_14b_720p.py  wan_2_1_i2v_14b_720p.py  wan_2_1_image_to_video_14b.py  wan_2_1_vace_14b.py
tm_animate/: __init__.py  client.py  config.py  core.py  registry.py
tm_animate/adapters/: __init__.py  base.py  wan_2_1.py
tm_animate/providers/modal/wan_2_1/: t2v.py
